Refactor HTML structure and update CSS styles for improved layout and typography

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
@@ -28,15 +28,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <article class="card">
-      <section>
+    <main>
+      <article class="card">
         <img
           src="images/image-qr-code.png"
           alt="QR code linking to Frontend Mentor"
           class="card__img"
           width="576"
           height="576"
-          aria-hidden="true"
         />
         <div class="card-text">
           <h1 class="card-text__title">
@@ -47,7 +46,7 @@
             skills to the next level
           </p>
         </div>
-      </section>
-    </article>
+      </article>
+    </main>
   </body>
 </html>
