Remove unused design assets, HTML, CSS, and JavaScript files for the interactive rating component

--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Scan the QR code to visit Frontend Mentor and improve your front-end skills by building projects">
     <title>Frontend Mentor | QR code component</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -25,11 +19,10 @@
       href="./images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main>
-      <article class="card">
+      <section class="card">
         <img
           src="images/image-qr-code.png"
           alt="QR code linking to Frontend Mentor"
@@ -37,16 +30,15 @@
           width="576"
           height="576"
         />
-        <div class="card-text">
-          <h1 class="card-text__title">
+        <div class="card__text">
+          <h1 class="card__title">
             Improve your front-end skills by building projects
           </h1>
-          <p class="card-text__p">
+          <p class="card__description">
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
           </p>
         </div>
-      </article>
-    </main>
+      </section>
   </body>
 </html>
