Replace card with container

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-      <section class="card">
+      <section class="container">
         <img
           src="images/image-qr-code.png"
           alt="QR code linking to Frontend Mentor"
-          class="card__img"
+          class="container__img"
           width="576"
           height="576"
         />
-        <div class="card__text">
-          <h1 class="card__title">
+        <div class="container__text">
+          <h1 class="container__title">
             Improve your front-end skills by building projects
           </h1>
-          <p class="card__description">
+          <p class="container__description">
             Scan the QR code to visit Frontend Mentor and take your coding
             skills to the next level
           </p>
