--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Scan the QR code to visit Frontend Mentor and improve your front-end skills by building projects">
+    <meta
+      name="description"
+      content="Scan the QR code to visit Frontend Mentor and improve your front-end skills by building projects"
+    />
     <title>Frontend Mentor | QR code component</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,26 +22,43 @@
       href="./images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="styles.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <style>
+      html {
+        font-size: 15px;
+      }
+    </style>
   </head>
-  <body>
-      <section class="container">
-        <img
-          src="images/image-qr-code.png"
-          alt="QR code linking to Frontend Mentor"
-          class="container__img"
-          width="576"
-          height="576"
-        />
-        <div class="container__text">
-          <h1 class="container__title">
-            Improve your front-end skills by building projects
-          </h1>
-          <p class="container__description">
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
-        </div>
-      </section>
+
+  <body
+    class="bg-[hsl(212,45%,89%)] font-[Outfit] flex justify-center items-center m-4 min-h-screen overflow-y-hidden"
+  >
+    <section
+      class="bg-white rounded-[1.5rem] p-4 pb[2.6rem] flex flex-col justify-center items-center shadow-[0_8px_15px_rgba(0,0,0,0.1)] max-w-[22rem]"
+    >
+      <img
+        src="images/image-qr-code.png"
+        alt="QR code linking to Frontend Mentor"
+        class="rounded-[0.7rem] mb-[1.6rem] block max-w-full h-auto"
+        width="576"
+        height="576"
+      />
+
+      <div class="text-center px-[1rem]">
+        <h1
+          class="text-xl font-bold text-[hsl(218,44%,22%)] mb-4"
+        >
+          Improve your front-end skills by building projects
+        </h1>
+
+        <p
+          class="text-base tracking-[0.2px] text-[hsl(216,15%,48%)]"
+        >
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </section>
   </body>
 </html>
