--- a/src/index.html
+++ b/src/index.html
@@ -14,47 +14,35 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-
+    <link href="./output.css" rel="stylesheet" />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="/images/favicon.ico"
     />
-
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
-    <style>
-      html {
-        font-size: 15px;
-      }
-    </style>
   </head>
 
   <body
-    class="bg-[hsl(212,45%,89%)] font-[Outfit] flex justify-center items-center m-4 min-h-screen overflow-y-hidden"
+    class="bg-slate-300 font-outfit flex justify-center items-center m-4 min-h-screen overflow-y-hidden"
   >
     <section
-      class="bg-white rounded-[1.5rem] p-4 pb[2.6rem] flex flex-col justify-center items-center shadow-[0_8px_15px_rgba(0,0,0,0.1)] max-w-[22rem]"
+      class="bg-white rounded-3xl p-4 pb-10 flex flex-col justify-center items-center shadow-md max-w-88"
     >
       <img
-        src="images/image-qr-code.png"
+        src="/images/image-qr-code.png"
         alt="QR code linking to Frontend Mentor"
-        class="rounded-[0.7rem] mb-[1.6rem] block max-w-full h-auto"
+        class="rounded-xl mb-6 block max-w-full h-auto"
         width="576"
         height="576"
       />
 
-      <div class="text-center px-[1rem]">
-        <h1
-          class="text-xl font-bold text-[hsl(218,44%,22%)] mb-4"
-        >
+      <div class="text-center px-4">
+        <h1 class="text-xl font-bold text-slate-900 mb-4">
           Improve your front-end skills by building projects
         </h1>
 
-        <p
-          class="text-base tracking-[0.2px] text-[hsl(216,15%,48%)]"
-        >
+        <p class="text-base text-slate-500">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
