fix: fixing images paths

--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link href="./output.css" rel="stylesheet" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/images/favicon.ico"
-    />
+    <link href="output.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.ico" />
   </head>
 
   <body
@@ -30,7 +25,7 @@
       class="bg-white rounded-3xl p-4 pb-10 flex flex-col justify-center items-center shadow-md max-w-88"
     >
       <img
-        src="/images/image-qr-code.png"
+        src="images/image-qr-code.png"
         alt="QR code linking to Frontend Mentor"
         class="rounded-xl mb-6 block max-w-full h-auto"
         width="576"
